syntax = "proto3";

option go_package = "/pb";

package todo;

service TodoService {
    rpc GetAllTodo(GetTodos) returns (TodoList);
    rpc GetTodo(TodoId) returns (TodoResponse);
    rpc CreateTodo (Todo) returns (TodoList);
    rpc UpdateTodo (Todo) returns (TodoResponse);
    rpc DeleteTodo (TodoId) returns (TodoList);
}

message Todo {
    int32 id = 1;
    string title =2;
    string description =3;
    bool isCompleted =4;
}

message GetTodos{}

message TodoResponse{
    Todo Todo =1;
}

message TodoId {
    int32 id = 1;
}

message TodoList {
    repeated Todo Todo = 1;
}
 